idp-v1-backup/objects/IDP_Mapping_Rule__mdt/IDP_Mapping_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Maps one JSON path of the reviewed document onto one field of the section&apos;s target object, optionally through an IDP Value Type.</description>
    <label>IDP Mapping Rule</label>
    <pluralLabel>IDP Mapping Rules</pluralLabel>
</CustomObject>