idp-v1-backup/objects/IDP_Mapping_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Untick to disable a rule without deleting it.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>