idp-v1-backup/objects/IDP_Mapping_Rule__mdt/fields/Anchor_Filter__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Filter__c</fullName>
    <description>Optional WHERE fragment narrowing which record the target object resolves to, e.g. Status__c = &apos;Active&apos; AND Policy_Number__c = {json:policy.number}. A section Record Filter supersedes it.</description>
    <label>Anchor Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>