idp-v1-backup/objects/IDP_Mapping_Rule__mdt/fields/JSON_Path__c.field-meta.xml
<CustomField>
    <fullName>JSON_Path__c</fullName>
    <description>Dot path into the JSON, with [n] for array indexes, e.g. &quot;applicant.dateOfBirth&quot; or &quot;beneficiaries[0].name&quot;. Relative to the row for rules on a Repeating section.</description>
    <label>JSON Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>