idp-v1-backup/objects/IDP_Mapping_Rule__mdt/fields/Min_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Min_Confidence__c</fullName>
    <description>0–1. When the JSON carries a confidence envelope ({&quot;value&quot;: ..., &quot;confidence&quot;: 0.93}), values below this threshold are reported instead of written. Blank accepts any confidence.</description>
    <label>Minimum Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>