idp-v1-backup/objects/IDP_Mapping_Rule__mdt/fields/Min_Grade__c.field-meta.xml
<CustomField>
    <fullName>Min_Grade__c</fullName>
    <description>Lowest parse grade allowed to write. &quot;Exact&quot; blocks heuristic (Inferred) parses; the default &quot;Inferred&quot; writes Exact and Inferred but never Ambiguous.</description>
    <label>Minimum Parse Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inferred</fullName>
                <default>true</default>
                <label>Inferred</label>
            </value>
            <value>
                <fullName>Exact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>