idp-v1-backup/objects/IDP_Mapping_Rule__mdt/fields/Overwrite_Policy__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_Policy__c</fullName>
    <description>Extraction mode only. Blank means Always.</description>
    <label>Overwrite Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
                <default>true</default>
                <label>Always</label>
            </value>
            <value>
                <fullName>Only if blank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>