idp-v1-backup/objects/IDP_Mapping_Rule__mdt/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ticked, a document that lacks this JSON path produces an error finding. Unticked paths that are absent are skipped silently.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>