idp-v1-backup/objects/IDP_Mapping_Rule__mdt/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>The section this rule belongs to. Rules on a Repeating section read their JSON Path relative to the current row.</description>
    <label>Section</label>
    <referenceTo>IDP_Section__mdt</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>