idp-v1-backup/objects/IDP_Mapping_Rule__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>The field that receives (Extraction) or is compared against (Compliance) the extracted value.</description>
    <label>Target Field</label>
    <metadataRelationshipControllingField>IDP_Mapping_Rule__mdt.Target_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>IDP Mapping Rules (Target Field)</relationshipLabel>
    <relationshipName>IDP_Mapping_Rules_Target</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>