idp-v1-backup/objects/IDP_Mapping_Rule__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>Must match the section&apos;s Target Object — it exists here so Target Field offers a filtered picker. The loader reports a config issue when they disagree.</description>
    <label>Target Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>IDP Mapping Rules</relationshipLabel>
    <relationshipName>IDP_Mapping_Rules</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>