idp-v1-backup/objects/IDP_Mapping_Rule__mdt/fields/Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Value_Type__c</fullName>
    <description>How the document value is parsed, compared and rendered. Blank auto-assigns a strict type from the target field: Number for numeric fields, ISO Date for dates, Phone for phones, Text otherwise.</description>
    <label>Value Type</label>
    <referenceTo>IDP_Value_Type__mdt</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>